# PhysLang

./: .gitignore  pyproject.toml  solar_system_sim.py
Interpreter3/src/: Environment.java  Main.java  (+2 more)
prototype/: anim.py  compile2.py  data_layout.py  datalayout.py  earth_sun_orbit.py  electron_sim.py  forces.py  func_handler.py  ops.json  particle.py  sample.json  sim_state.py  solar_system.json  solar_system_sim.py  test.py  update_rules.py
prototype/syzygy/: anim.py  anim_native.py  compile2.py  dummy.py  electron_sim.py  expression.py  forces.py  func_handler.py  interpreter.py  main.py  parser.py  pyproject.toml  sample.json  scanner.py  sim_state.py  solar_system_sim.py  statement.py  token.py  tokens.py  tokentype.py  update_rules.py
prototype/syzygy/compile/: compile2.py  compile3.py
prototype/syzygy/data/: annihilate_solar.json  sample.json  solar_system.json
prototype/syzygy/grammar/: grammar.lark
prototype/syzygy/parse/: ast_utils.py  func_builder.py  obj_builder.py  parse.py
prototype/syzygy/parse/funcs/: ast.py  lex.py
prototype/syzygy/parse/objs/: expression.py  interpreter.py  main.py  parser.py  scanner.py  statement.py  tokentype.py
prototype/syzygy/parse_funcs/: ast.py
prototype/syzygy/sim/: data_layout.py  func_handler.py  sim_state.py
prototype/syzygy/syntax/: force.lark  function.lark  grammar.lark  identifier.lark  literal.lark  sim_group.lark  var.lark  vars.py
prototype/syzygy/syzygy.egg-info/: PKG-INFO  SOURCES.txt
src/: web.py
tests/: bounce_sim.py  bounce_sim_2.py  solar_system.txt  solar_system_sim.py
(+30 files in other folders)
