[project]
name = "syzygy"
version = "1.0.0"
dependencies = [
  "numpy",
  "matplotlib",
  "lark"
]
requires-python = ">=3.8"
authors = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}, # Add your names
]

maintainers = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}, # Add your names
]


readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["syzygy"]

[tool.setuptools.packages.find]
where = ["."]


