[project]

name = "syzygy"

version = "1.0.0"

readme = "README.md"

requires-python = ">=3.8"

dependencies = [
  "numpy",
  "matplotlib",
  "lark"
]

authors = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}, # Add your names
]

maintainers = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}, # Add your names
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["src/syzygy"]
