[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "syzygy"
version = "1.0.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}, # Add your names
]

maintainers = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}, # Add your names
]

readme = "README.md"
